# plz-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/.deploy/: bump.sh
.github/workflows/: lint.yml  release.yml
src/: config.rs  main.rs
