[package]
name = "plz"
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/m1guelpf/plz-cli"
repository = "https://github.com/m1guelpf/plz-cli"
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]
description = "Generate bash scripts from the command line, using Codex"

[dependencies]
question = "0.2.2"
spinners = "4.1.0"
serde_json = { version = "1.0.89", default-features = false }
clap = { version = "4.0.29", features = ["derive"] }
reqwest = { version = "0.11.13", default-features = false, features = ["json", "blocking", "native-tls-crate", "default-tls", "hyper-tls", "__tls"] }
bat = { version = "0.22.1", default-features = false, features = ["regex-onig"] }
colored = "2.0.0"
tempfile = "3.3.0"
